--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.28.11",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-scroll-into-view": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
